--- a/tutorials/memManage/pom.xml
+++ b/tutorials/memManage/pom.xml
@@ -14,8 +14,8 @@
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
     <apex.version>3.6.0-SNAPSHOT</apex.version>
+    <!-- <apex.version>3.5.0</apex.version> -->
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
-    <!-- <malhar.version>3.4.0</malhar.version> -->
   </properties>
 
   <build>
@@ -253,26 +253,6 @@
       <version>${apex.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.11</artifactId>
-      <version>0.9.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>info.batey.kafka</groupId>
-      <artifactId>kafka-unit</artifactId>
-      <version>0.4</version>
-      <exclusions>
-        <exclusion>
-          <groupId>*</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-
 
   </dependencies>
 
